# cdatastructures

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
queue/: CMakeLists.txt  queue.c  test_queue.cpp
stack/: CMakeLists.txt  stack.c  test_stack.cpp
